GNOME Bugzilla – Bug 762053
gst-omx failing to build. error: ‘GL_RGBA8’ undeclared
Last modified: 2016-07-06 09:14:12 UTC
The gst-omx fails to build when bulding 'examples'. This is slightly different from bug 753917. Here we have error: ‘GL_RGBA8’ undeclared. Platform: RaspPi2 with Raspian Jessie - 8 fully updated. Build command : LDFLAGS='-L/opt/vc/lib' CPPFLAGS='-I/opt/vc/include -I/opt/vc/include/IL -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux' ./autogen.sh --disable-gtk-doc --with-omx-target=rpi --with-omx-header-path=/opt/vc/include/IL make[3]: Entering directory '/home/pi/Projects/GStreamer/gst-omx-1.2.0/examples/egl' CC testegl-testegl.o testegl.c: In function ‘init_textures’: testegl.c:734:37: error: ‘GL_RGBA8’ undeclared (first use in this function) testegl.c:734:37: note: each undeclared identifier is reported only once for each function it appears in testegl.c: In function ‘query_cb’: testegl.c:1082:11: error: too few arguments to function ‘gst_gl_handle_context_query’ In file included from /usr/local/include/gstreamer-1.0/gst/gl/gl.h:35:0, from testegl.c:61: /usr/local/include/gstreamer-1.0/gst/gl/gstglutils.h:102:10: note: declared here Makefile:509: recipe for target 'testegl-testegl.o' failed make[3]: *** [testegl-testegl.o] Error 1 make[3]: Leaving directory '/home/pi/Projects/GStreamer/gst-omx-1.2.0/examples/egl' Makefile:463: recipe for target 'all-recursive' failed make[2]: *** [all-recursive] Error 1 make[2]: Leaving directory '/home/pi/Projects/GStreamer/gst-omx-1.2.0/examples' Makefile:513: recipe for target 'all-recursive' failed make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory '/home/pi/Projects/GStreamer/gst-omx-1.2.0' Makefile:444: recipe for target 'all' failed
commit 705d7722fbe05da17f2bedfdc34476382687c95f Author: Matthew Waters <matthew@centricular.com> Date: Wed Feb 17 20:51:03 2016 +1100 examples: update egl example for gstgl API changes https://bugzilla.gnome.org/show_bug.cgi?id=762053 https://bugzilla.gnome.org/show_bug.cgi?id=753917